--- a/style.css
+++ b/style.css
@@ -9,4 +9,9 @@ nav > ul > li {
     margin: 5px 20px 20px 40px;
     background-color: white;
 }
+
+h1 {
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+}
 © 2020 GitHub, Inc.
