--- a/style.css
+++ b/style.css
@@ -14,4 +14,10 @@ h1 {
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
 }
+
+footer {
+    text-align: center;
+    padding: 12px;
+    font-size: smaller;
+}
 © 2020 GitHub, Inc.
